test/org/midica/testfiles/failing/include-failing-file.midica
INCLUDE inc/instruments-with-nestable-block.midica

0 c /4
0 d /4
*
1 c /4
